# semantic_mpc_docker

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPENDENCIES.md  README.md  compose.cpu.yaml  compose.gpu.yaml  compose.yaml  pixi.toml
docker/: Dockerfile  entrypoint.sh  requirements-linux.txt  run-controller.sh
docker/launch/: runtime.launch
models/: README.md  checksums.sha256
models/yolo/: apples.pt
scripts/: doctor.sh  generate_wandb_report.py  run.sh  setup.sh  stop.sh
src/: CMakeLists.txt  rl_agent.launch
src/ROS-TCP-Endpoint/: CMakeLists.txt  package.xml
src/ROS-TCP-Endpoint/launch/: endpoint.launch
src/ROS-TCP-Endpoint/src/ros_tcp_endpoint/: default_server_endpoint.py
src/active_rl_classification/: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  package.xml  pyproject.toml  setup.py
src/active_rl_classification/data/: RawData.csv  RipeData.csv
src/active_rl_classification/scripts/: rl_agent_node.py  rl_agent_ros_node.py  ros_rl_node.py
src/active_rl_classification/src/active_rl_classification/: __init__.py  attention.py  env.py  evaluate.py  model.py  perception.py  tests.py  train.py  visualize_baseline.py
src/active_rl_classification/tests/: test_suite.py
src/active_rl_classification/tools/ros/: dry_run_ros.py
src/semantic_mpc/: .gitignore  README.md  requirements.txt
src/semantic_mpc/notebooks/: plot_heatmaps.ipynb  train_test_nmpc_synthetic_dataset.ipynb  unity_test.ipynb
src/semantic_mpc/semantic_mpc/: CMakeLists.txt  package.xml  setup.py
src/semantic_mpc/semantic_mpc/artifacts/results/: plot_traj.ipynb
src/semantic_mpc/semantic_mpc/config/: baseline.yaml  data_association.yaml  experiment.yaml  nmpc.yaml
src/semantic_mpc/semantic_mpc/launch/: baseline.launch  nmpc.launch  nmpc_decay.launch
src/semantic_mpc/semantic_mpc/scripts/: baseline_node.py  data_association_node.py  delayed_launch.py  nmpc_node.py
src/semantic_mpc/semantic_mpc/src/semantic_mpc_package/: __init__.py  experiment_metrics.py  experiment_sampling.py  nmpc.py  nmpc_config.py  nmpc_model.py  nmpc_optimizer.py  ros_experiment.py
src/semantic_mpc/semantic_mpc/src/semantic_mpc_package/baselines/: __init__.py  casadi_mpc.py  greedy.py  linear.py  mower.py
src/semantic_mpc/semantic_mpc/src/semantic_mpc_package/nodes/: __init__.py  baseline_node.py  data_association_node.py  nmpc_decay_node.py
src/semantic_mpc/semantic_mpc/src/semantic_mpc_package/ros_com_lib/: sensors.py
src/semantic_mpc/semantic_mpc/srv/: GetTreesPoses.srv
src/semantic_mpc/semantic_mpc/tests/: test_greedy_baseline.py  test_nmpc_optimizer.py
src/semantic_mpc/semantic_mpc/tools/plots/: batch_performances_generation.py  plot_trajectories.ipynb  plot_trajectory_decay.ipynb
src/semantic_mpc/semantic_mpc/tools/plots/scripts/: plot_activation_func.ipynb  plot_batch_comparison_w_baselines.py  plot_batch_comparison_w_baselines_false_positives.py  plot_batch_metrics_comparison.py  plot_metrics_comparison.py  plot_mpc_csv_comparison.py  plot_trajectories.py
src/semantic_mpc/tools/dataset/: generate_dataset.py
src/semantic_mpc/tools/launch/: run_multi.sh
src/yolov7-ros/launch/: yolov7.launch
src/yolov7-ros/src/: visualizer.py
tests/: test_generate_wandb_report.py
